# passwd

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  PROJECT_STATUS.md  README.md  STORAGE_DESIGN_UPDATE.md  index.html  package-lock.json  package.json
src/: App.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: config.rs  crypto.rs  github_client.rs  github_store.rs  lib.rs  log.rs  main.rs  manager.rs  password.rs  store.rs
src-tauri/src/store/: local_store.rs  mod.rs
src-tauri/src/store/github_store/: github_client.rs  mod.rs
src-tauri/src_back/: config.rs  crypto.rs  github_client.rs  github_store.rs  lib.rs  main.rs  manager.rs  password.rs  simple_crypto.rs  store.rs
src/components/: searchbar.vue
