[package]
name = "passwd"
version = "0.1.0"
description = "A Tauri App"
authors = ["yawnbright"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "passwd_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-fs = "2.4.2"


reqwest = { version = "0.12", default-features = false, features = [
  "json",
  "rustls-tls",
] }
tokio = { version = "1.0", features = ["full"] }
base64 = "0.22"
# clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.9"
aes-gcm = "0.10"
sha2 = "0.10"
uuid = { version = "1.0", features = ["v4", "serde"] }
